package Entidades.Equipo;

public enum Equipamiento {
    EQUIPOBASE,
    CASCO,
    ARMADURA,
    ESCUDOYESPADA,
    LLAVE;
}